# nmemonica-voice-ja

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: job-build.yml  job-publish.yml  job-test.yml  npm-publish.yml  pull-request.yml
src/: lib.rs  lib_utils.rs  speech.rs  voice.rs
src/voice_sound/: mod.rs  trim.rs
tests/: package-lock.json  package.json  wasm_js_play.js  wasm_js_test.js
