[package]
name = "voice-ja"
description = "Japanese voice module for Nmemonica"
version = "0.1.0"
authors = ["bryanjimenez <bryanjimenez6@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

jbonsai = { version = "0.2", git = "https://github.com/bryanjimenez/jbonsai",  features = ["htsvoice"] }
jpreprocess = { version = "0.10", features = ["naist-jdic"] }
rodio = "0.19.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"


[lints.clippy]
unwrap_used = "warn"
