[package]
name = "voice-ja"
description = "Japanese voice module for Nmemonica"
version = "0.1.1"
authors = ["bryanjimenez <bryanjimenez6@gmail.com>"]
repository = "https://github.com/bryanjimenez/nmemonica-voice-ja"
keywords = ["language", "japanese"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

jbonsai = { version = "0.3", features = ["htsvoice"] }
jpreprocess = { version = "0.12", features = ["naist-jdic"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = { version = "0.19" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[lints.clippy]
unwrap_used = "warn"
